--- a/articles.yml
+++ b/articles.yml
@@ -1,3 +1,14 @@
+- Year: 2026
+  Title: "Data Resource Profile: Climate and Enteric Diseases Research Project (ClimED)"
+  Authors: "Chua PL, Madaniyazi L, Tobias A, Ng CF, Phung VL, Pan R, et al."
+  Journal: International Journal of Epidemiology
+  #DOI: 
+
+- Year: 2025
+  Title: "The association between total precipitation and diarrhea morbidity: A multicountry study across diverse climate zones"
+  Authors: "Pan R, Chua PL, Madaniyazi L, Ng CF, Tobias A, Guo Q, et al."
+  Journal: Environmental Epidemiology
+  #DOI: 10.1097/EE9.0000000000000366
 
 - Year: 2025
   Title: "A scoping review and thematic analysis of the effects of tropical cyclones on diarrheal diseases"
